--- a/play/papas-pizzeria/index.html
+++ b/play/papas-pizzeria/index.html
@@ -1,2 +1,13 @@
 <h1>Play Papa's Pizzeria:</h1>
 
+<script>
+    window.RufflePlayer = window.RufflePlayer || {};
+    window.addEventListener("load", (event) => {
+        const ruffle = window.RufflePlayer.newest();
+        const player = ruffle.createPlayer();
+        const container = document.getElementById("container");
+        container.appendChild(player);
+        player.load("movie.swf");
+    });
+</script>
+<script src="/ruffle/ruffle.js"></script>
