--- a/play/papas-pizzeria/index.html
+++ b/play/papas-pizzeria/index.html
@@ -7,7 +7,11 @@
         const player = ruffle.createPlayer();
         const container = document.getElementById("container");
         container.appendChild(player);
-        player.load("movie.swf");
+        player.load("https://swf-games-vault.github.io/files/swf/papaspizzeria_v2.swf");
     });
 </script>
 <script src="/ruffle/ruffle.js"></script>
+
+<p><strong>Description:</strong></p>
+<br>
+<p>Help Roy top, bake, and serve pizzas while Papa Louie is gone!</p>
