--- a/play/index.html
+++ b/play/index.html
@@ -1,7 +1,7 @@
 <h1>Play Flash games</h1>
 
 <a href="/play/papas-pizzeria/"><stong>Papa's Pizzeria</strong></a>
-<img src="http://i.flipline.com/gamefiles/papaspizzeria/images/gameicon.jpg" alt="Papa's Pizzeria thumbnail">
+<img src="https://swf-games-vault.github.io/files/images/thumbnails/papas-pizzeria.jpg" alt="Papa's Pizzeria thumbnail">
 <br>
 <p>Help Roy top, bake, and serve pizzas while Papa Louie is gone!</p>
 <br>
