--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
-Site is under construction! Please tune-in for the new archive!
+<h1>WELCOME TO THE SWF GAMES VAULT!</h1>
+<p>Our mission is to provide and preserve as many Flash programs as we can, so anyone can use them for free.</p>
